// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialRequestModalFooter Component Rendering should match snapshot with disabled consent button 1`] = `
<DocumentFragment>
  <div
    class="px-6 py-4 border-t !border-[var(--iw-color-borderLight)]"
  >
    <div
      class="flex flex-col gap-3 sm:hidden"
    >
      <button
        class="rounded-lg transition-all w-full h-10 min-h-[40px] sm:w-44 sm:h-12 sm:min-h-[48px] text-center border-none p-0 font-montserrat font-bold text-base leading-4 cursor-not-allowed text-white !bg-[var(--iw-color-grayLight)]"
        data-testid="btn-consent-share"
        disabled=""
        type="button"
      />
      <div
        class="relative rounded-lg p-0.5 !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)]"
      >
        <button
          class="transition-all relative w-full h-10 min-h-[40px] sm:w-36 sm:h-12 sm:min-h-[48px] text-base text-center border-none !bg-[var(--iw-color-tileBackground)] p-0 bg-white rounded-md w-full h-full flex items-center justify-center border-none"
          data-testid="btn-cancel"
          type="button"
        >
          <span
            class="font-montserrat font-bold text-base leading-4 text-center inline-block whitespace-nowrap overflow-visible p-0.5 m-0 w-auto min-w-fit !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)] !bg-clip-text !text-transparent"
          />
        </button>
      </div>
    </div>
    <div
      class="hidden sm:flex justify-end items-center gap-3"
    >
      <div
        class="relative rounded-lg p-0.5 !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)]"
      >
        <button
          class="transition-all relative w-full h-10 min-h-[40px] sm:w-36 sm:h-12 sm:min-h-[48px] text-base text-center border-none !bg-[var(--iw-color-tileBackground)] p-0 bg-white rounded-md w-full h-full flex items-center justify-center border-none"
          data-testid="btn-cancel"
          type="button"
        >
          <span
            class="font-montserrat font-bold text-base leading-4 text-center inline-block whitespace-nowrap overflow-visible p-0.5 m-0 w-auto min-w-fit !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)] !bg-clip-text !text-transparent"
          />
        </button>
      </div>
      <button
        class="rounded-lg transition-all w-full h-10 min-h-[40px] sm:w-44 sm:h-12 sm:min-h-[48px] text-center border-none p-0 font-montserrat font-bold text-base leading-4 cursor-not-allowed text-white !bg-[var(--iw-color-grayLight)]"
        data-testid="btn-consent-share"
        disabled=""
        type="button"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CredentialRequestModalFooter Component Rendering should match snapshot with enabled consent button 1`] = `
<DocumentFragment>
  <div
    class="px-6 py-4 border-t !border-[var(--iw-color-borderLight)]"
  >
    <div
      class="flex flex-col gap-3 sm:hidden"
    >
      <button
        class="rounded-lg transition-all w-full h-10 min-h-[40px] sm:w-44 sm:h-12 sm:min-h-[48px] text-center border-none p-0 font-montserrat font-bold text-base leading-4 hover:opacity-90 text-white !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)]"
        data-testid="btn-consent-share"
        type="button"
      />
      <div
        class="relative rounded-lg p-0.5 !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)]"
      >
        <button
          class="transition-all relative w-full h-10 min-h-[40px] sm:w-36 sm:h-12 sm:min-h-[48px] text-base text-center border-none !bg-[var(--iw-color-tileBackground)] p-0 bg-white rounded-md w-full h-full flex items-center justify-center border-none"
          data-testid="btn-cancel"
          type="button"
        >
          <span
            class="font-montserrat font-bold text-base leading-4 text-center inline-block whitespace-nowrap overflow-visible p-0.5 m-0 w-auto min-w-fit !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)] !bg-clip-text !text-transparent"
          />
        </button>
      </div>
    </div>
    <div
      class="hidden sm:flex justify-end items-center gap-3"
    >
      <div
        class="relative rounded-lg p-0.5 !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)]"
      >
        <button
          class="transition-all relative w-full h-10 min-h-[40px] sm:w-36 sm:h-12 sm:min-h-[48px] text-base text-center border-none !bg-[var(--iw-color-tileBackground)] p-0 bg-white rounded-md w-full h-full flex items-center justify-center border-none"
          data-testid="btn-cancel"
          type="button"
        >
          <span
            class="font-montserrat font-bold text-base leading-4 text-center inline-block whitespace-nowrap overflow-visible p-0.5 m-0 w-auto min-w-fit !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)] !bg-clip-text !text-transparent"
          />
        </button>
      </div>
      <button
        class="rounded-lg transition-all w-full h-10 min-h-[40px] sm:w-44 sm:h-12 sm:min-h-[48px] text-center border-none p-0 font-montserrat font-bold text-base leading-4 hover:opacity-90 text-white !bg-[linear-gradient(90deg,_#FF5300_0%,_#FB5103_16%,_#F04C0F_31%,_#DE4322_46%,_#C5363C_61%,_#A4265F_75%,_#7C1389_90%,_#5B03AD_100%)]"
        data-testid="btn-consent-share"
        type="button"
      />
    </div>
  </div>
</DocumentFragment>
`;
